fixed some bugs in walls

--- a/games/monkey/text/eng/text.yaml
+++ b/games/monkey/text/eng/text.yaml
@@ -620,3 +620,4 @@ lines:
   46: "\"DIGMASTER™ -- The only shovel for serious treadure-hunting enthusiasts.\""
   47: My, what an unusually bright yellow they are.
   48: It's a striking yellow color.
+  49: "\"DANGER: Open ravine.\""
