--- a/games/monkey/rooms/forest1.yaml
+++ b/games/monkey/rooms/forest1.yaml
@@ -3,6 +3,8 @@
   type: default
   width: 320
   height: 144
+  on_start: on_start_forest1
+  on_load: on_load_forest1
   items:
     - factory: [bg, {'image': gfx/forest_1.png}]
       d: [[0, 0, -1]]
