--- a/games/monkey/rooms/forest2.yaml
+++ b/games/monkey/rooms/forest2.yaml
@@ -3,6 +3,8 @@
   type: default
   width: 320
   height: 144
+  on_start: on_start_forest2
+  on_load: on_load_forest2
   items:
     - factory: [bg, {'image': gfx/forest_2.png}]
       d: [[0, 0, -1]]
