--- a/games/monkey/rooms/forest6.yaml
+++ b/games/monkey/rooms/forest6.yaml
@@ -3,6 +3,8 @@
   type: default
   width: 320
   height: 144
+  on_start: on_start_forest6
+  on_load: on_load_forest6
   items:
     - factory: [bg, {'image': gfx/forest_6.png}]
       d: [[0, 0, -1]]
