--- a/games/monkey/assets/01.yaml
+++ b/games/monkey/assets/01.yaml
@@ -629,72 +629,72 @@ citizen:
   type: 'asset.sprite'
   animations:
     idle_s:
-      frames:
-        - [ [164, 1, 29, 31, 15, 0], [196, 11, 9, 9, 5,-27]]
-        - [ [164, 1, 29, 31, 15, 0], [196, 1, 9, 9, 5, -27]]
-        - [ [164, 1, 29, 31, 15, 0], [196, 11, 9, 9, 5, -27]]
-        - [ [164, 1, 29, 31, 15, 0], [196, 1, 9, 9, 5, -27, 1]]
+      elements:
+        - quads: [ [164, 1, 29, 31, 15, 0], [196, 11, 9, 9, 5,-27]]
+        - quads: [ [164, 1, 29, 31, 15, 0], [196, 1, 9, 9, 5, -27]]
+        - quads: [ [164, 1, 29, 31, 15, 0], [196, 11, 9, 9, 5, -27]]
+        - quads: [ [164, 1, 29, 31, 15, 0], [196, 1, 9, 9, 5, -27, 1]]
     talk_s:
-      frames:
-        - [ [164, 1, 29, 31, 15, 0], [231, 1, 9, 9, 5, -27]]
-        - [ [164, 1, 29, 31, 15, 0], [231, 11, 9, 9, 5, -27]]
-        - [ [164, 1, 29, 31, 15, 0], [196, 11, 9, 9, 5, -27]]
+      elements:
+        - quads: [ [164, 1, 29, 31, 15, 0], [231, 1, 9, 9, 5, -27]]
+        - quads: [ [164, 1, 29, 31, 15, 0], [231, 11, 9, 9, 5, -27]]
+        - quads: [ [164, 1, 29, 31, 15, 0], [196, 11, 9, 9, 5, -27]]
     idle_e:
-      frames:
-        - [ [207, 3, 22, 29, 17, 0], [196, 1, 9, 9, 7, -27]]
-        - [ [207, 3, 22, 29, 17, 0], [196, 21, 9, 9, 7, -27]]
-        - [ [207, 3, 22, 29, 17, 0], [196, 1, 9, 9, 7, -27]]
-        - [ [207, 3, 22, 29, 17, 0], [196, 11, 9, 9, 7, -27]]
+      elements:
+        - quads: [ [207, 3, 22, 29, 17, 0], [196, 1, 9, 9, 7, -27]]
+        - quads: [ [207, 3, 22, 29, 17, 0], [196, 21, 9, 9, 7, -27]]
+        - quads: [ [207, 3, 22, 29, 17, 0], [196, 1, 9, 9, 7, -27]]
+        - quads: [ [207, 3, 22, 29, 17, 0], [196, 11, 9, 9, 7, -27]]
     idle_e_1:
-      frames:
-        - [ [328, 3, 38, 29, 25, 0], [196, 1, 9, 9, 7,-27]]
-        - [ [328, 3, 38, 29, 25, 0], [196, 21, 9, 9, 7,-27]]
-        - [ [328, 3, 38, 29, 25, 0], [196, 1, 9, 9, 7, -27]]
-        - [ [328, 3, 38, 29, 25, 0], [196, 11, 9, 9, 7, -27]]
+      elements:
+        - quads: [ [328, 3, 38, 29, 25, 0], [196, 1, 9, 9, 7,-27]]
+        - quads: [ [328, 3, 38, 29, 25, 0], [196, 21, 9, 9, 7,-27]]
+        - quads: [ [328, 3, 38, 29, 25, 0], [196, 1, 9, 9, 7, -27]]
+        - quads: [ [328, 3, 38, 29, 25, 0], [196, 11, 9, 9, 7, -27]]
     idle_e_2:
-      frames:
-        - [ [286, 34, 25, 29, 16, 0], [196, 1, 9, 9, 7, -27]]
-        - [ [286, 34, 25, 29, 16, 0], [196, 21, 9, 9, 7,-27]]
-        - [ [286, 34, 25, 29, 16, 0], [196, 1, 9, 9, 7, -27]]
-        - [ [286, 34, 25, 29, 16, 0], [196, 11, 9, 9, 7, -27]]
+      elements:
+        - quads: [ [286, 34, 25, 29, 16, 0], [196, 1, 9, 9, 7, -27]]
+        - quads: [ [286, 34, 25, 29, 16, 0], [196, 21, 9, 9, 7,-27]]
+        - quads: [ [286, 34, 25, 29, 16, 0], [196, 1, 9, 9, 7, -27]]
+        - quads: [ [286, 34, 25, 29, 16, 0], [196, 11, 9, 9, 7, -27]]
     talk_e:
-      frames:
-        - [ [207, 3, 22, 29, 17, 0], [231, 1, 9, 9, 7, -27]]
-        - [ [207, 3, 22, 29, 17, 0], [231, 11, 9, 9, 7, -27]]
-        - [ [207, 3, 22, 29, 17, 0], [196,21,9,9,7,-27]]
+      elements:
+        - quads: [ [207, 3, 22, 29, 17, 0], [231, 1, 9, 9, 7, -27]]
+        - quads: [ [207, 3, 22, 29, 17, 0], [231, 11, 9, 9, 7, -27]]
+        - quads: [ [207, 3, 22, 29, 17, 0], [196,21,9,9,7,-27]]
     talk_e_1:
-      frames:
-        - [[328,3,38,29,25,0],[231,1,9,9,7,-27]]
-        - [[328,3,38,29,25,0],[231,11,9,9,7,-27]]
-        - [[328,3,38,29,25,0],[196,21,9,9,7,-27]]
+      elements:
+        - quads: [[328,3,38,29,25,0],[231,1,9,9,7,-27]]
+        - quads: [[328,3,38,29,25,0],[231,11,9,9,7,-27]]
+        - quads: [[328,3,38,29,25,0],[196,21,9,9,7,-27]]
     talk_e_2:
-      frames:
-        - [[286,34,25,29,16,0],[231,1,9,9,7,-27]]
-        - [[286,34,25,29,16,0],[231,11,9,9,7,-27]]
-        - [[286,34,25,29,16,0],[196,21,9,9,7,-27]]
+      elements:
+        - quads: [[286,34,25,29,16,0],[231,1,9,9,7,-27]]
+        - quads: [[286,34,25,29,16,0],[231,11,9,9,7,-27]]
+        - quads: [[286,34,25,29,16,0],[196,21,9,9,7,-27]]
     open_jacket:
       loop: false
-      frames:
-        - [[207, 3, 22, 29, 17, 0], [196, 21, 9, 9, 7, -27]]
-        - [[241, 3, 26, 29, 20, 0], [196, 21, 9, 9, 7, -27]]
-        - [[269, 3, 23, 29, 17, 0], [196, 21, 9, 9, 7, -27]]
-        - [[293, 3, 33, 29, 25, 0], [196, 21, 9, 9, 7, -27]]
-        - [[328, 3, 38, 29, 25, 0], [196, 21, 9, 9, 7, -27]]
+      elements:
+        - quads: [[207, 3, 22, 29, 17, 0], [196, 21, 9, 9, 7, -27]]
+        - quads: [[241, 3, 26, 29, 20, 0], [196, 21, 9, 9, 7, -27]]
+        - quads: [[269, 3, 23, 29, 17, 0], [196, 21, 9, 9, 7, -27]]
+        - quads: [[293, 3, 33, 29, 25, 0], [196, 21, 9, 9, 7, -27]]
+        - quads: [[328, 3, 38, 29, 25, 0], [196, 21, 9, 9, 7, -27]]
     rollmap:
       loop: false
-      frames:
-        - [[207, 3, 22, 29, 17, 0], [196, 21, 9, 9, 7, -27]]
-        - [[165, 34, 29, 29, 17, 0], [196, 21, 9, 9, 7, -27]]
-        - [[197, 34, 26, 29, 16, 0], [196, 21, 9, 9, 7, -27]]
-        - [[226, 34, 26, 29, 16, 0], [196, 21, 9, 9, 7, -27]]
-        - [[257, 34, 26, 29, 16, 0], [196, 21, 9, 9, 7, -27]]
-        - [[286, 34, 25, 29, 16, 0], [196, 21, 9, 9, 7, -27]]
+      elements:
+        - quads: [[207, 3, 22, 29, 17, 0], [196, 21, 9, 9, 7, -27]]
+        - quads: [[165, 34, 29, 29, 17, 0], [196, 21, 9, 9, 7, -27]]
+        - quads: [[197, 34, 26, 29, 16, 0], [196, 21, 9, 9, 7, -27]]
+        - quads: [[226, 34, 26, 29, 16, 0], [196, 21, 9, 9, 7, -27]]
+        - quads: [[257, 34, 26, 29, 16, 0], [196, 21, 9, 9, 7, -27]]
+        - quads: [[286, 34, 25, 29, 16, 0], [196, 21, 9, 9, 7, -27]]
     givemap:
-      frames:
-        - [[316, 466, 29, 30, 16, 0], [196, 21, 9, 9, 5, 0]]
-        - [[346, 466, 37, 30, 16, 0], [196, 21, 9, 9, 5, 0]]
-        - [[470, 400, 29, 30, 16, 0], [196, 21, 9, 9, 5, 0]]
-        - [[207, 3, 22, 29, 17, 0], [196, 21, 9, 9, 5, 0]]
+      elements:
+        - quads: [[316, 466, 29, 30, 16, 0], [196, 21, 9, 9, 5, 0]]
+        - quads: [[346, 466, 37, 30, 16, 0], [196, 21, 9, 9, 5, 0]]
+        - quads: [[470, 400, 29, 30, 16, 0], [196, 21, 9, 9, 5, 0]]
+        - quads: [[207, 3, 22, 29, 17, 0], [196, 21, 9, 9, 5, 0]]
 lowmoral1:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
@@ -788,52 +788,52 @@ fakedoor1:
   type: 'asset.sprite'
   animations:
     closed:
-      frames:
-        - [58,179,16,29]
+      elements:
+        - quads: [[58,179,16,29]]
     open:
-      frames:
-        - [76,179,16,29]
+      elements:
+        - quads: [[76,179,16,29]]
 
 fakedoor2:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
   animations:
     closed:
-      frames:
-        - [3,204,8,14]
+      elements:
+        - quads: [[3,204,8,14]]
     open:
-      frames:
-        - [13,204,8,14]
+      elements:
+        - quads: [[13,204,8,14]]
 fakedoor3:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
   animations:
     closed:
-      frames:
-        - [388,484,8,13]
+      elements:
+        - quads: [[388,484,8,13]]
     open:
-      frames:
-        - [398,484,8,13]
+      elements:
+        - quads: [[398,484,8,13]]
 fakedoor4:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
   animations:
     closed:
-      frames:
-        - [388,498,8,12]
+      elements:
+        - quads: [[388,498,8,12]]
     open:
-      frames:
-        - [398,398,8,12]
+      elements:
+        - quads: [[398,398,8,12]]
 door_village_voodoolady:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
   animations:
     closed:
-      frames:
-        - [3,179,26,24]
+      elements:
+        - quads: [[3,179,26,24]]
     open:
-      frames:
-        - [31,179,26,24]
+      elements:
+        - quads: [[31,179,26,24]]
 door_voodoolady_village:
   sheet: 'gfx/sprites/sprites2.png'
   type: 'asset.sprite'
