--- a/games/monkey/assets/01.yaml
+++ b/games/monkey/assets/01.yaml
@@ -145,6 +145,15 @@ guybrush:
         - quads: [[124,249,19,20,4,-16]]
         - quads: [[147,249,23,20,4,-22]]
         - quads: [[172,252,21,13,4,-22]]
+    open_map:
+      loop: False
+      elements:
+        - quads: [[21,301,22,47,14,0]]
+        - quads: [[44,301,23,47,15,0]]
+        - quads: [[68,301,23,47,14,0]]
+        - quads: [[93,301,22,47,10,0]]
+        - quads: [[116,301,21,47,9,0]]
+       # - quads: [[140,312,21,36,9,0]]
 circus_explosion:
   sheet: "gfx/sprites/sprites1.png"
   type: 'asset.sprite'
@@ -690,11 +699,16 @@ citizen:
         - quads: [[257, 34, 26, 29, 16, 0], [196, 21, 9, 9, 7, -27]]
         - quads: [[286, 34, 25, 29, 16, 0], [196, 21, 9, 9, 7, -27]]
     givemap:
+      loop: false
       elements:
-        - quads: [[316, 466, 29, 30, 16, 0], [196, 21, 9, 9, 5, 0]]
-        - quads: [[346, 466, 37, 30, 16, 0], [196, 21, 9, 9, 5, 0]]
-        - quads: [[470, 400, 29, 30, 16, 0], [196, 21, 9, 9, 5, 0]]
-        - quads: [[207, 3, 22, 29, 17, 0], [196, 21, 9, 9, 5, 0]]
+        - quads: [[316, 466, 29, 30, 17, 0], [196, 21, 9, 9, 7, -27]]
+          ticks: 3
+        - quads: [[346, 466, 37, 30, 17, 0], [196, 21, 9, 9, 7, -27]]
+          ticks: 3
+        - quads: [[470, 400, 29, 30, 17, 0], [196, 21, 9, 9, 7, -27]]
+          ticks: 3
+        - quads: [[207, 3, 22, 29, 17, 0], [196, 21, 9, 9, 7, -27]]
+          ticks: 3
 lowmoral1:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
