--- a/games/monkey/rooms/forest7.yaml
+++ b/games/monkey/rooms/forest7.yaml
@@ -9,5 +9,5 @@
     - factory: [bg, {'image': gfx/forest_7.png}]
       d: [[0, 0, -1]]
     - factory: [walkarea, {'id': walkarea_0, 'depth': { 'type': "func.liny", 'values': [0, 1, 144, 0]}, 'outline':
-        [0,30,77,30,140,0,197,0,213,47,320,47,320,48,213,48,77,31,0,31], 'walls': [[230, 0, 230, 144, '@forest_bridge_wall']]} ]
+        [0,30,77,30,140,0,197,0,213,47,320,47,320,48,213,48,77,31,0,31], 'walls': [[230, 0, 230, 144, '@vars/forest_bridge_wall']]} ]
       d: [[0,0,0]]
