--- a/games/monkey/rooms/forest8.yaml
+++ b/games/monkey/rooms/forest8.yaml
@@ -1,18 +1,20 @@
 ---
-  id: forest3
+  id: forest8
   type: default
   width: 320
   height: 144
-  on_start: on_start_forest3
-  on_load: on_load_forest3
+  #on_start: on_start_forest7
+  #on_load: on_load_forest7
   items:
-    - factory: [bg, {'image': gfx/forest_3.png}]
+    - factory: [bg, {'image': gfx/forest_8.png}]
       d: [[0, 0, -1]]
+    - factory: [bg, {'image': gfx/forest_fg_4.png}]
+      d: [[0, 0, 1]]
     - factory: [bg, {'image': gfx/forest_fg_1.png}]
       d: [[104, 0, 1]]
     - factory: [bg, {'image': gfx/forest_fg_3.png}]
       d: [[208, 0, 1]]
     - factory: [walkarea, {'id': walkarea_0, 'depth': { 'type': "func.liny", 'values': [0, 1, 144, 0]},
-        'nodes': [135,69,135,35,320,35],
-        'edges': [0,1,1,2]}]
+        'nodes': [0,24,136,24,136,65,320,24],
+        'edges': [0,1,1,2,1,3]}]
       d: [[0,0,0]]
