--- a/games/monkey/rooms/forest2.yaml
+++ b/games/monkey/rooms/forest2.yaml
@@ -10,6 +10,8 @@
       d: [[0, 0, -1]]
     - factory: [bg, {'image': gfx/forest_2a.png}]
       d: [[122, 21, 1]]
+    - factory: [bg, {'image': gfx/forest_fg_3.png}]
+      d: [[0, 0, 1]]
     - factory: [bg, {'image': gfx/forestyp.png}]
       d: [[247, 0, 1]]
     - factory: [walkarea, {'id': walkarea_0, 'depth': { 'type': "func.liny", 'values': [0, 1, 144, 0]},
