--- a/games/monkey/rooms/forest5.yaml
+++ b/games/monkey/rooms/forest5.yaml
@@ -8,6 +8,10 @@
   items:
     - factory: [bg, {'image': gfx/forest_5.png}]
       d: [[0, 0, -1]]
+    - factory: [bg, {'image': gfx/forest_fg_1.png}]
+      d: [[208, 0, 1]]
+    - factory: [bg, {'image': gfx/forest_fg_2.png}]
+      d: [[104, 0, 1]]
     - factory: [walkarea, {'id': walkarea_0, 'depth': { 'type': "func.liny", 'values': [0, 1, 144, 0]},
         'nodes': [0, 24,241,24,320,24,241,69],
         'edges': [0,1,1,2,1,3]}]
