--- a/src/mogo/CMakeLists.txt
+++ b/src/mogo/CMakeLists.txt
@@ -7,3 +7,14 @@ include_directories(${INCLUDE_DIR} ${PYBIND_INCLUDE_DIR} ${Python3_INCLUDE_DIRS}
 target_link_libraries(mogo PUBLIC monkey)
 
 install(TARGETS mogo DESTINATION ${BIN_DIR})
+
+message("PALOEN")
+
+add_custom_target(copy_assets
+		COMMAND rsync -ra "${CMAKE_SOURCE_DIR}/glsl" "${CMAKE_CURRENT_BINARY_DIR}")
+add_dependencies(mogo copy_assets)
+
+#add_custom_command(copy_assets
+#		COMMAND rsync
+#		ARGS -ra "${CMAKE_SOURCE_DIR}/glsl" "${CMAKE_CURRENT_BINARY_DIR}")
+
