--- a/games/test_model_3d/main.yaml
+++ b/games/test_model_3d/main.yaml
@@ -3,4 +3,6 @@
   lang: eng
   device_size: [320, 240]
   window_size: [640, 480]
-  start_room: 'test3d'
+  start_room: trinterp
+  shaders:
+    - color
