--- a/games/test_model_3d/assets/001.yaml
+++ b/games/test_model_3d/assets/001.yaml
@@ -4,11 +4,39 @@
   vertex: pc
   # pc = position color
   points: [
-    10, 80, 0, 1, 0.5, 0.2, 1,
-    30, 80, 0, 1, 0.5, 0.2, 1,
-    30, 140, 0, 1, 0.5, 0.2, 1,
-    50, 140, 0, 1, 0.5, 0.2, 1,
-    50, 80, 0, 1, 0.5, 0.2, 1,
-    70, 80, 0, 1, 0.5, 0.2, 1,
-    70, 160, 0, 1, 0.5, 0.2, 1,
-    10, 160, 0, 1, 0.5, 0.2, 1]
+    10, 80, 1, 0.5, 0.2, 1,
+    30, 80, 1, 0.5, 0.2, 1,
+    30, 140, 1, 0.5, 0.2, 1,
+    50, 140, 1, 0.5, 0.2, 1,
+    50, 80, 1, 0.5, 0.2, 1,
+    70, 80, 1, 0.5, 0.2, 1,
+    70, 160, 1, 0.5, 0.2, 1,
+    10, 160, 1, 0.5, 0.2, 1]
+'002_fill':
+  type: model.poly
+  vertex: pc
+  render: fill
+  points: [
+    200, 80, 1, 0.5, 0.2, 1,
+    300, 80, 1, 0.5, 0.2, 1,
+    300, 160, 1, 0.5, 0.2, 1,
+    200, 160, 1, 0.5, 0.2, 1]
+  holes: [
+    [220, 100, 1, 0.5, 0.2, 1,
+     280, 100, 1, 0.5, 0.2, 1,
+     280, 140, 1, 0.5, 0.2, 1,
+     220, 140, 1, 0.5, 0.2, 1]]
+'002_lines':
+  type: model.poly
+  vertex: pc
+  render: lines
+  points: [
+    200, 80, 1, 0.5, 0.2, 1,
+    300, 80, 1, 0.5, 0.2, 1,
+    300, 160, 1, 0.5, 0.2, 1,
+    200, 160, 1, 0.5, 0.2, 1]
+  holes: [
+    [220, 100, 1, 0.5, 0.2, 1,
+     280, 100, 1, 0.5, 0.2, 1,
+     280, 140, 1, 0.5, 0.2, 1,
+     220, 140, 1, 0.5, 0.2, 1]]
