--- a/src/monkey/CMakeLists.txt
+++ b/src/monkey/CMakeLists.txt
@@ -21,15 +21,15 @@ endif(DEFINED USE_ASSIMP)
 
 add_library(monkey SHARED ${MONKEY_SOURCE})
 
-#message(${LUA_INCLUDE_DIR})
+
 
 include_directories(${INCLUDE_DIR} ${PYBIND_INCLUDE_DIR} ${Python3_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS}
-		${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${YAML_INCLUDE_DIRS} ${ASSIMP_INCLUDE_DIRS})
+		${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${YAML_INCLUDE_DIRS} ${ASSIMP_INCLUDE_DIRS} ${BOX2D_INCLUDE_DIRS})
 
 target_link_libraries(monkey
     ${OPENGL_LIBRARIES} ${Python3_LIBRARIES} glfw
     GLEW::GLEW ${FREETYPE_LIBRARIES} ${YAML_CPP_LIBRARIES}
-    ${PNG_LIBRARY} ${JPEG_LIBRARIES} ${CMAKE_DL_LIBS} ${ASSIMP_LIBRARIES} alglib)
+    ${PNG_LIBRARY} ${JPEG_LIBRARIES} ${CMAKE_DL_LIBS} ${ASSIMP_LIBRARIES} alglib box2d)
 
 
 #add_custom_command(
