--- a/src/monkey/CMakeLists.txt
+++ b/src/monkey/CMakeLists.txt
@@ -22,7 +22,8 @@ endif(DEFINED USE_ASSIMP)
 add_library(monkey SHARED ${MONKEY_SOURCE})
 
 
-
+message(${PYBIND_INCLUDE_DIR})
+message("FILODEPUTA")
 include_directories(${INCLUDE_DIR} ${PYBIND_INCLUDE_DIR} ${Python3_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS}
 		${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${YAML_INCLUDE_DIRS} ${ASSIMP_INCLUDE_DIRS} ${BOX2D_INCLUDE_DIRS})
 
